@@ -37,14 +37,10 @@ SHA256 56aafee80ad705e8d832f8853c36d763d37b87d1cb132a41c50eb63085ae854d files/vm
 DIST VMware-workstation-6.0.0-45731.i386.tar.gz 190053947 RMD160 cb20bebe843ef7ae6b0fe3155b61bd8d29fbdaa2 SHA1 2daa71872b1e03f01843a918c7301c7b577585a7 SHA256 6781820f88c2321ecd9fe12f1a228703717b92447565cef40648789dde06e698
 DIST VMware-workstation-6.0.0-45731.x86_64.tar.gz 166956169 RMD160 355db06ad645032ce575deb8afea2c7e1d53dff3 SHA1 3a57951e6771faa065d6e75ba01b44bd6dd3462a SHA256 b6a46596f17e67cd1473a82844fc2828a48af81d088a7ae3908d3092f754a842
 DIST vmware-any-any-update109.tar.gz 295773 RMD160 823b961d7b8f8a97af02f0bb2ed775fa5840ec54 SHA1 504380f59620ce47197975d5b326129fae6d7019 SHA256 392dd7d4fd990efcbd664f982d71e8ad8ba1d08425ab37e640a1bee0909b67a8
-EBUILD vmware-workstation-6.0.0.45731.ebuild 3578 RMD160 d1fe66dc29d2c2ac8631bf0098dfc62ce15f1708 SHA1 3df1be77e29a02c17f8386394d5225cd1693b7ff SHA256 a01f7c5b910c7d0d9cf4b41f35cd0ecab4e7de448b4397c2c71e99bfa27ff2ba
-MD5 f7007d4940168de0b3b0b20d47b9278c vmware-workstation-6.0.0.45731.ebuild 3578
-RMD160 d1fe66dc29d2c2ac8631bf0098dfc62ce15f1708 vmware-workstation-6.0.0.45731.ebuild 3578
-SHA256 a01f7c5b910c7d0d9cf4b41f35cd0ecab4e7de448b4397c2c71e99bfa27ff2ba vmware-workstation-6.0.0.45731.ebuild 3578
-MISC .vmware-workstation-6.0.0.45731.ebuild.swp 16384 RMD160 03ccff828c28d7d2532de2c6cfc2ff25e8663a15 SHA1 b2b5a4fb8d57c1836167c69c3450fe05be875c6f SHA256 715f14e8ed028edef02827ff3aada376359f2959fdd10a0d8768715e802ee6ac
-MD5 b206f171ae0e24d0dc4edbcc5afbd453 .vmware-workstation-6.0.0.45731.ebuild.swp 16384
-RMD160 03ccff828c28d7d2532de2c6cfc2ff25e8663a15 .vmware-workstation-6.0.0.45731.ebuild.swp 16384
-SHA256 715f14e8ed028edef02827ff3aada376359f2959fdd10a0d8768715e802ee6ac .vmware-workstation-6.0.0.45731.ebuild.swp 16384
+EBUILD vmware-workstation-6.0.0.45731.ebuild 3663 RMD160 013c1bae457febc734d65072a079eb93a55e5938 SHA1 4dc45a5d679a7abd0d188d2099634825d263dd02 SHA256 65cf6f386e3e23e67fad21a177beb8960fb9c91dab5d7fd652926c9b5071c4bf
+MD5 96b6c563342500f31df160b3d5261bfd vmware-workstation-6.0.0.45731.ebuild 3663
+RMD160 013c1bae457febc734d65072a079eb93a55e5938 vmware-workstation-6.0.0.45731.ebuild 3663
+SHA256 65cf6f386e3e23e67fad21a177beb8960fb9c91dab5d7fd652926c9b5071c4bf vmware-workstation-6.0.0.45731.ebuild 3663
 MISC ChangeLog 12691 RMD160 c2004f093d1479978d7c0bb3a0d155851a577eac SHA1 d8e4b3b6d88469777866d80b513777171951a10c SHA256 af61d26d4fab464194c25841ce6dc6050dc5828ebe3eaf170dc531f627d7be7c
 MD5 3d2f699f8c2e2a402636dfc0f5822dda ChangeLog 12691
 RMD160 c2004f093d1479978d7c0bb3a0d155851a577eac ChangeLog 12691
